# cs248

./: AUTHORS  COPYING  ChangeLog  ChangeLog.md  Makefile.am  README  README.md  configure.ac
.github/scripts/: cs248-build.sh
.github/workflows/: cs248-ci.yml  cs248-ucvm-ci.yml
data/: Makefile.am  config  make_data_files.py
src/: Makefile.am  cs173h.c  cs241.c  cs241.h  cs248.c
test/: Makefile.am  run_unit  test_api.c
tests/: Makefile.am
