# Autoconf/automake file

#bin_PROGRAMS = test_cs241

# General compiler/linker flags
#AM_CFLAGS = ${CFLAGS}
#AM_LDFLAGS = ${LDFLAGS}

#objects = test.o
#TARGETS = $(bin_PROGRAMS)

#all: $(bin_PROGRAMS)

#install:
#	mkdir -p ${prefix}/tests
#	cp test_cs241 ${prefix}/tests

#test_cs241: $(objects)
#	$(CC) -o $@ $^ $(AM_CFLAGS) -L../src -lcs241 $(AM_LDFLAGS)

#$(objects): %.o: %.c
#	$(CC) -o $@ -c $^ $(AM_CFLAGS) -I../src/ $(AM_CFLAGS)
